--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -1,9 +1,9 @@
 .sidebar {
     width: 240px;
     position: fixed;
-    top: 87px; /* Adjust based on the height of the AppHeader */
+    top: 87px; 
     left: 0;
-    height: calc(100% - 87px); /* Adjust based on the height of the AppHeader */
+    height: calc(100% - 87px); 
     background-color: #1f4d84;
     border-right: 1px solid #ddd;
     padding-top: 20px;
@@ -11,7 +11,7 @@
     z-index: 1000;
     display: flex;
     flex-direction: column;
-    justify-content: space-between; /* Ensures the profile section is at the bottom */
+    justify-content: space-between; 
   }
   
   .sidebar .nav-title {
@@ -19,15 +19,15 @@
     font-weight: bold;
     margin-bottom: 20px;
     text-align: center;
-    background-color: #ffffff; /* Background color */
-    padding: 10px 15px; /* Padding for spacing */
-    border-radius: 8px; /* Rounded corners */
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Shadow effect */
+    background-color: #ffffff; 
+    padding: 10px 15px;
+    border-radius: 8px; 
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     display: flex;
-    justify-content: center; /* Center align text horizontally */
-    align-items: center; /* Center align text vertically */
-    width: 90%; /* Adjust width to fit within sidebar */
-    margin: 0 auto 20px auto; /* Center horizontally with auto margin */
+    justify-content: center; 
+    align-items: center; 
+    width: 90%; 
+    margin: 0 auto 20px auto; 
   }
   
   .sidebar .nav-link {
@@ -43,7 +43,7 @@
   }
   
   .sidebar .nav-icon {
-    margin-right: 10px; /* Adjust the spacing as needed */
+    margin-right: 10px; 
   }
   
   .profile-section {
