--- a/src/pages/gestaoSocios.css
+++ b/src/pages/gestaoSocios.css
@@ -1,14 +1,12 @@
-/* src/pages/gestaoSocios.css */
-
 .gestao-socios-content {
     display: flex;
-    margin-top: 66px; /* Adjust this based on the height of the AppHeader */
+    margin-top: 66px; 
   }
   
   .main-content {
-    margin-left: 240px; /* Adjust based on the width of the sidebar */
+    margin-left: 240px; 
     padding: 20px;
-    width: calc(100% - 240px); /* Adjust based on the width of the sidebar */
+    width: calc(100% - 240px); 
   }
   
   @media (max-width: 768px) {
