--- a/src/pages/perfil.css
+++ b/src/pages/perfil.css
@@ -1,12 +1,12 @@
 .gestao-perfil-content {
   display: flex;
-  margin-top: 66px; /* Adjust this based on the height of the AppHeader */
+  margin-top: 66px;
 }
 
 .main-content {
-  margin-left: 240px; /* Adjust based on the width of the sidebar */
+  margin-left: 240px; 
   padding: 20px;
-  width: calc(100% - 240px); /* Adjust based on the width of the sidebar */
+  width: calc(100% - 240px); 
 }
 
 @media (max-width: 768px) {
