change the sidebar opne and close button. Align the contact info to right on footer

--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -22,6 +22,10 @@
   align-items: center;
 }
 
+.contact-right {
+  text-align: left;
+}
+
 .contact-item {
   display: flex;
   align-items: center;
